--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
   <script src="/assets/js/oneko.js" defer></script>
   <script src="/assets/js/index.js" defer></script>
   <script src="/assets/js/type.js" defer></script>
+  <script src="/assets/js/card.js" defer></script>
 </body>
 </html>
