--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1 class="name">sent</h1>
       <div class="project-link">
         <h2>My Latest Project</h2>
-        <a href="https://github.com/xojw/waves" class="project-link-btn" target="_blank">
+        <a href="https://github.com/xojw/waves" target="_blank" class="project-link-btn">
           Waves
           <span class="tooltip">View Project</span>
         </a>
@@ -35,15 +35,15 @@
       <p class="author">- Robert Frost</p>
       <div class="social-icons-container">
         <div class="social-icons">
-          <a href="http://discord.com/users/1111107934919852063/" class="social-icon" data-tooltip="Discord">
+          <a href="http://discord.com/users/1111107934919852063/" target="_blank" class="social-icon" data-tooltip="Discord">
             <i class="fab fa-discord"></i>
             <span class="tooltip">Discord</span>
           </a>
-          <a href="https://github.com/xojw/" class="social-icon" data-tooltip="GitHub">
+          <a href="https://github.com/xojw/" target="_blank" class="social-icon" data-tooltip="GitHub">
             <i class="fab fa-github"></i>
             <span class="tooltip">GitHub</span>
           </a>
-          <a href="https://usewaves.site/" class="social-icon" data-tooltip="Website">
+          <a href="https://usewaves.site/" target="_blank" class="social-icon" data-tooltip="Website">
             <i class="fa solid fa-globe"></i>
             <span class="tooltip">Website</span>
           </a>
