--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script type='text/javascript' src='//spaniardinformationbookworm.com/f0/e8/15/f0e81559842363ebf19aa99900ff2d02.js'></script>
 </head>
 <body>
+  <h1>CLICK</h1>
 <script>
 (function(){
   const targetUrl='https://spaniardinformationbookworm.com/jmzq26nu?key=362a2802eeb1b13df2f74ab21f27a973';
