--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <i class="fab fa-github"></i>
             <span class="tooltip">GitHub</span>
           </a>
-          <a href="https://usewaves.site/" target="_blank" class="social-icon" data-tooltip="Website">
+          <a href="https://waves.lat/" target="_blank" class="social-icon" data-tooltip="Website">
             <i class="fa solid fa-globe"></i>
             <span class="tooltip">Website</span>
           </a>
